rust/crates/rax-nmea/src/sentence/snapshots/rax_nmea__sentence__gsv__test__2.snap
---
source: crates/rax-nmea/src/sentence/gsv.rs
expression: gsv
---
{
  "satellites": [
    {
      "svid": 2,
      "elv": 35,
      "az": 291,
      "cno": null
    },
    {
      "svid": 3,
      "elv": 9,
      "az": 129,
      "cno": null
    },
    {
      "svid": 5,
      "elv": 14,
      "az": 305,
      "cno": null
    },
    {
      "svid": 6,
      "elv": 38,
      "az": 226,
      "cno": null
    }
  ],
  "signal_id": null
}
