rust/crates/rax-nmea/src/sentence/snapshots/rax_nmea__sentence__gsv__test__new_gsv_0.snap
---
source: crates/rax-nmea/src/sentence/gsv.rs
expression: gsv
---
{
  "satellites": [],
  "signal_id": null
}
